mrc/trunk/interpreter/interp.output
Terminals which are not used

   ERR


Grammar

    0 $accept: input $end

    1 input: /* empty */
    2      | input line

    3 line: '\n'
    4     | CMD parlist vehiclestate '\n'
    5     | CMD parlist vehiclestate condstart condlist '\n'
    6     | ':' condlist '\n'
    7     | EVAL explist '\n'
    8     | IF '(' exp ')' STRING
    9     | VAR '=' exp
   10     | VAR '[' exp ']' '=' exp
   11     | NEWVAR '=' exp
   12     | SWITCH '(' exp ')'
   13     | CASE NUM
   14     | ENDSWITCH
   15     | error '\n'

   16 condstart: ':'

   17 explist: exp
   18        | explist ';' exp

   19 parlist: /* empty */
   20        | parlist NUM
   21        | parlist '-' NUM
   22        | parlist VAR
   23        | parlist STRING

   24 vehiclestate: /* empty */
   25             | vehiclestate VEL NUM
   26             | vehiclestate VEL '-' NUM
   27             | vehiclestate VEL VAR
   28             | vehiclestate ACC NUM
   29             | vehiclestate ACC VAR

   30 condlist: '(' exp ')'
   31         | condlist '|' '(' exp ')'

   32 exp: NUM
   33    | VAR
   34    | VAR '[' exp ']'
   35    | FNCT '(' exp ')'
   36    | FNCT2 '(' exp ',' exp ')'
   37    | exp '|' exp
   38    | exp '&' exp
   39    | exp EQ exp
   40    | exp NEQ exp
   41    | exp '>' exp
   42    | exp '<' exp
   43    | exp LTE exp
   44    | exp GTE exp
   45    | exp '+' exp
   46    | exp '-' exp
   47    | exp '*' exp
   48    | exp '/' exp
   49    | '-' exp
   50    | exp '^' exp
   51    | '(' exp ')'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 3 4 5 6 7 15
'&' (38) 38
'(' (40) 8 12 30 31 35 36 51
')' (41) 8 12 30 31 35 36 51
'*' (42) 47
'+' (43) 45
',' (44) 36
'-' (45) 21 26 46 49
'/' (47) 48
':' (58) 6 16
';' (59) 18
'<' (60) 42
'=' (61) 9 10 11
'>' (62) 41
'[' (91) 10 34
']' (93) 10 34
'^' (94) 50
'|' (124) 31 37
error (256) 15
EQ (258) 39
NEQ (259) 40
GTE (260) 44
LTE (261) 43
VEL (262) 25 26 27
ACC (263) 28 29
NEWVAR (264) 11
VAR (265) 9 10 22 27 29 33 34
FNCT (266) 35
FNCT2 (267) 36
CMD (268) 4 5
NUM (269) 13 20 21 25 26 28 32
STRING (270) 8 23
IF (271) 8
EVAL (272) 7
SWITCH (273) 12
CASE (274) 13
ENDSWITCH (275) 14
ERR (276)
NEG (277)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
input (42)
    on left: 1 2, on right: 0 2
line (43)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14 15, on right: 2
condstart (44)
    on left: 16, on right: 5
explist (45)
    on left: 17 18, on right: 7 18
parlist (46)
    on left: 19 20 21 22 23, on right: 4 5 20 21 22 23
vehiclestate (47)
    on left: 24 25 26 27 28 29, on right: 4 5 25 26 27 28 29
condlist (48)
    on left: 30 31, on right: 5 6 31
exp (49)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
    50 51, on right: 8 9 10 11 12 17 18 30 31 34 35 36 37 38 39 40
    41 42 43 44 45 46 47 48 49 50 51


state 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


state 1

    0 $accept: input . $end
    2 input: input . line

    $end       shift, and go to state 2
    error      shift, and go to state 3
    NEWVAR     shift, and go to state 4
    VAR        shift, and go to state 5
    CMD        shift, and go to state 6
    IF         shift, and go to state 7
    EVAL       shift, and go to state 8
    SWITCH     shift, and go to state 9
    CASE       shift, and go to state 10
    ENDSWITCH  shift, and go to state 11
    '\n'       shift, and go to state 12
    ':'        shift, and go to state 13

    line  go to state 14


state 2

    0 $accept: input $end .

    $default  accept


state 3

   15 line: error . '\n'

    '\n'  shift, and go to state 15


state 4

   11 line: NEWVAR . '=' exp

    '='  shift, and go to state 16


state 5

    9 line: VAR . '=' exp
   10     | VAR . '[' exp ']' '=' exp

    '='  shift, and go to state 17
    '['  shift, and go to state 18


state 6

    4 line: CMD . parlist vehiclestate '\n'
    5     | CMD . parlist vehiclestate condstart condlist '\n'

    $default  reduce using rule 19 (parlist)

    parlist  go to state 19


state 7

    8 line: IF . '(' exp ')' STRING

    '('  shift, and go to state 20


state 8

    7 line: EVAL . explist '\n'

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    explist  go to state 27
    exp      go to state 28


state 9

   12 line: SWITCH . '(' exp ')'

    '('  shift, and go to state 29


state 10

   13 line: CASE . NUM

    NUM  shift, and go to state 30


state 11

   14 line: ENDSWITCH .

    $default  reduce using rule 14 (line)


state 12

    3 line: '\n' .

    $default  reduce using rule 3 (line)


state 13

    6 line: ':' . condlist '\n'

    '('  shift, and go to state 31

    condlist  go to state 32


state 14

    2 input: input line .

    $default  reduce using rule 2 (input)


state 15

   15 line: error '\n' .

    $default  reduce using rule 15 (line)


state 16

   11 line: NEWVAR '=' . exp

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 33


state 17

    9 line: VAR '=' . exp

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 34


state 18

   10 line: VAR '[' . exp ']' '=' exp

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 35


state 19

    4 line: CMD parlist . vehiclestate '\n'
    5     | CMD parlist . vehiclestate condstart condlist '\n'
   20 parlist: parlist . NUM
   21        | parlist . '-' NUM
   22        | parlist . VAR
   23        | parlist . STRING

    VAR     shift, and go to state 36
    NUM     shift, and go to state 37
    STRING  shift, and go to state 38
    '-'     shift, and go to state 39

    $default  reduce using rule 24 (vehiclestate)

    vehiclestate  go to state 40


state 20

    8 line: IF '(' . exp ')' STRING

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 41


state 21

   33 exp: VAR .
   34    | VAR . '[' exp ']'

    '['  shift, and go to state 42

    $default  reduce using rule 33 (exp)


state 22

   35 exp: FNCT . '(' exp ')'

    '('  shift, and go to state 43


state 23

   36 exp: FNCT2 . '(' exp ',' exp ')'

    '('  shift, and go to state 44


state 24

   32 exp: NUM .

    $default  reduce using rule 32 (exp)


state 25

   49 exp: '-' . exp

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 45


state 26

   51 exp: '(' . exp ')'

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 46


state 27

    7 line: EVAL explist . '\n'
   18 explist: explist . ';' exp

    '\n'  shift, and go to state 47
    ';'   shift, and go to state 48


state 28

   17 explist: exp .
   37 exp: exp . '|' exp
   38    | exp . '&' exp
   39    | exp . EQ exp
   40    | exp . NEQ exp
   41    | exp . '>' exp
   42    | exp . '<' exp
   43    | exp . LTE exp
   44    | exp . GTE exp
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '^' exp

    EQ   shift, and go to state 49
    NEQ  shift, and go to state 50
    GTE  shift, and go to state 51
    LTE  shift, and go to state 52
    '|'  shift, and go to state 53
    '&'  shift, and go to state 54
    '>'  shift, and go to state 55
    '<'  shift, and go to state 56
    '-'  shift, and go to state 57
    '+'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '^'  shift, and go to state 61

    $default  reduce using rule 17 (explist)


state 29

   12 line: SWITCH '(' . exp ')'

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 62


state 30

   13 line: CASE NUM .

    $default  reduce using rule 13 (line)


state 31

   30 condlist: '(' . exp ')'

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 63


state 32

    6 line: ':' condlist . '\n'
   31 condlist: condlist . '|' '(' exp ')'

    '|'   shift, and go to state 64
    '\n'  shift, and go to state 65


state 33

   11 line: NEWVAR '=' exp .
   37 exp: exp . '|' exp
   38    | exp . '&' exp
   39    | exp . EQ exp
   40    | exp . NEQ exp
   41    | exp . '>' exp
   42    | exp . '<' exp
   43    | exp . LTE exp
   44    | exp . GTE exp
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '^' exp

    EQ   shift, and go to state 49
    NEQ  shift, and go to state 50
    GTE  shift, and go to state 51
    LTE  shift, and go to state 52
    '|'  shift, and go to state 53
    '&'  shift, and go to state 54
    '>'  shift, and go to state 55
    '<'  shift, and go to state 56
    '-'  shift, and go to state 57
    '+'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '^'  shift, and go to state 61

    $default  reduce using rule 11 (line)


state 34

    9 line: VAR '=' exp .
   37 exp: exp . '|' exp
   38    | exp . '&' exp
   39    | exp . EQ exp
   40    | exp . NEQ exp
   41    | exp . '>' exp
   42    | exp . '<' exp
   43    | exp . LTE exp
   44    | exp . GTE exp
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '^' exp

    EQ   shift, and go to state 49
    NEQ  shift, and go to state 50
    GTE  shift, and go to state 51
    LTE  shift, and go to state 52
    '|'  shift, and go to state 53
    '&'  shift, and go to state 54
    '>'  shift, and go to state 55
    '<'  shift, and go to state 56
    '-'  shift, and go to state 57
    '+'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '^'  shift, and go to state 61

    $default  reduce using rule 9 (line)


state 35

   10 line: VAR '[' exp . ']' '=' exp
   37 exp: exp . '|' exp
   38    | exp . '&' exp
   39    | exp . EQ exp
   40    | exp . NEQ exp
   41    | exp . '>' exp
   42    | exp . '<' exp
   43    | exp . LTE exp
   44    | exp . GTE exp
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '^' exp

    EQ   shift, and go to state 49
    NEQ  shift, and go to state 50
    GTE  shift, and go to state 51
    LTE  shift, and go to state 52
    '|'  shift, and go to state 53
    '&'  shift, and go to state 54
    '>'  shift, and go to state 55
    '<'  shift, and go to state 56
    '-'  shift, and go to state 57
    '+'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '^'  shift, and go to state 61
    ']'  shift, and go to state 66


state 36

   22 parlist: parlist VAR .

    $default  reduce using rule 22 (parlist)


state 37

   20 parlist: parlist NUM .

    $default  reduce using rule 20 (parlist)


state 38

   23 parlist: parlist STRING .

    $default  reduce using rule 23 (parlist)


state 39

   21 parlist: parlist '-' . NUM

    NUM  shift, and go to state 67


state 40

    4 line: CMD parlist vehiclestate . '\n'
    5     | CMD parlist vehiclestate . condstart condlist '\n'
   25 vehiclestate: vehiclestate . VEL NUM
   26             | vehiclestate . VEL '-' NUM
   27             | vehiclestate . VEL VAR
   28             | vehiclestate . ACC NUM
   29             | vehiclestate . ACC VAR

    VEL   shift, and go to state 68
    ACC   shift, and go to state 69
    '\n'  shift, and go to state 70
    ':'   shift, and go to state 71

    condstart  go to state 72


state 41

    8 line: IF '(' exp . ')' STRING
   37 exp: exp . '|' exp
   38    | exp . '&' exp
   39    | exp . EQ exp
   40    | exp . NEQ exp
   41    | exp . '>' exp
   42    | exp . '<' exp
   43    | exp . LTE exp
   44    | exp . GTE exp
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '^' exp

    EQ   shift, and go to state 49
    NEQ  shift, and go to state 50
    GTE  shift, and go to state 51
    LTE  shift, and go to state 52
    '|'  shift, and go to state 53
    '&'  shift, and go to state 54
    '>'  shift, and go to state 55
    '<'  shift, and go to state 56
    '-'  shift, and go to state 57
    '+'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '^'  shift, and go to state 61
    ')'  shift, and go to state 73


state 42

   34 exp: VAR '[' . exp ']'

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 74


state 43

   35 exp: FNCT '(' . exp ')'

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 75


state 44

   36 exp: FNCT2 '(' . exp ',' exp ')'

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 76


state 45

   37 exp: exp . '|' exp
   38    | exp . '&' exp
   39    | exp . EQ exp
   40    | exp . NEQ exp
   41    | exp . '>' exp
   42    | exp . '<' exp
   43    | exp . LTE exp
   44    | exp . GTE exp
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   49    | '-' exp .
   50    | exp . '^' exp

    '^'  shift, and go to state 61

    $default  reduce using rule 49 (exp)


state 46

   37 exp: exp . '|' exp
   38    | exp . '&' exp
   39    | exp . EQ exp
   40    | exp . NEQ exp
   41    | exp . '>' exp
   42    | exp . '<' exp
   43    | exp . LTE exp
   44    | exp . GTE exp
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '^' exp
   51    | '(' exp . ')'

    EQ   shift, and go to state 49
    NEQ  shift, and go to state 50
    GTE  shift, and go to state 51
    LTE  shift, and go to state 52
    '|'  shift, and go to state 53
    '&'  shift, and go to state 54
    '>'  shift, and go to state 55
    '<'  shift, and go to state 56
    '-'  shift, and go to state 57
    '+'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '^'  shift, and go to state 61
    ')'  shift, and go to state 77


state 47

    7 line: EVAL explist '\n' .

    $default  reduce using rule 7 (line)


state 48

   18 explist: explist ';' . exp

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 78


state 49

   39 exp: exp EQ . exp

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 79


state 50

   40 exp: exp NEQ . exp

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 80


state 51

   44 exp: exp GTE . exp

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 81


state 52

   43 exp: exp LTE . exp

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 82


state 53

   37 exp: exp '|' . exp

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 83


state 54

   38 exp: exp '&' . exp

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 84


state 55

   41 exp: exp '>' . exp

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 85


state 56

   42 exp: exp '<' . exp

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 86


state 57

   46 exp: exp '-' . exp

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 87


state 58

   45 exp: exp '+' . exp

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 88


state 59

   47 exp: exp '*' . exp

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 89


state 60

   48 exp: exp '/' . exp

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 90


state 61

   50 exp: exp '^' . exp

    VAR    shift, and go to state 21
    FNCT   shift, and go to state 22
    FNCT2  shift, and go to state 23
    NUM    shift, and go to state 24
    '-'    shift, and go to state 25
    '('    shift, and go to state 26

    exp  go to state 91


state 62

   12 line: SWITCH '(' exp . ')'
   37 exp: exp . '|' exp
   38    | exp . '&' exp
   39    | exp . EQ exp
   40    | exp . NEQ exp
   41    | exp . '>' exp
   42    | exp . '<' exp
   43    | exp . LTE exp
   44    | exp . GTE exp
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '^' exp

    EQ   shift, and go to state 49
    NEQ  shift, and go to state 50
    GTE  shift, and go to state 51
    LTE  shift, and go to state 52
    '|'  shift, and go to state 53
    '&'  shift, and go to state 54
    '>'  shift, and go to state 55
    '<'  shift, and go to state 56
    '-'  shift, and go to state 57
    '+'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '^'  shift, and go to state 61
    ')'  shift, and go to state 92


state 63

   30 condlist: '(' exp . ')'
   37 exp: exp . '|' exp
   38    | exp . '&' exp
   39    | exp . EQ exp
   40    | exp . NEQ exp
   41    | exp . '>' exp
   42    | exp . '<' exp
   43    | exp . LTE exp
   44    | exp . GTE exp
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '^' exp

    EQ   shift, and go to state 49
    NEQ  shift, and go to state 50
    GTE  shift, and go to state 51
    LTE  shift, and go to state 52
    '|'  shift, and go to state 53
    '&'  shift, and go to state 54
    '>'  shift, and go to state 55
    '<'  shift, and go to state 56
    '-'  shift, and go to state 57
    '+'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '^'  shift, and go to state 61
    ')'  shift, and go to state 93


state 64

   31 condlist: condlist '|' . '(' exp ')'

    '('  shift, and go to state 94


state 65

    6 line: ':' condlist '\n' .

    $default  reduce using rule 6 (line)


state 66

   10 line: VAR '[' exp ']' . '=' exp

    '='  shift, and go to state 95


state 67

   21 parlist: parlist '-' NUM .

    $default  reduce using rule 21 (parlist)


state 68

   25 vehiclestate: vehiclestate VEL . NUM
   26             | vehiclestate VEL . '-' NUM
   27             | vehiclestate VEL . VAR

    VAR  shift, and go to state 96
    NUM  shift, and go to state 97
    '-'  shift, and go to state 98


state 69

   28 vehiclestate: vehiclestate ACC . NUM
   29             | vehiclestate ACC . VAR

    VAR  shift, and go to state 99
    NUM  shift, and go to state 100


state 70

    4 line: CMD parlist vehiclestate '\n' .

    $default  reduce using rule 4 (line)


state 71

   16 condstart: ':' .

    $default  reduce using rule 16 (condstart)


state 72

    5 line: CMD parlist vehiclestate condstart . condlist '\n'

    '('  shift, and go to state 31

    condlist  go to state 101


state 73

    8 line: IF '(' exp ')' . STRING

    STRING  shift, and go to state 102


state 74

   34 exp: VAR '[' exp . ']'
   37    | exp . '|' exp
   38    | exp . '&' exp
   39    | exp . EQ exp
   40    | exp . NEQ exp
   41    | exp . '>' exp
   42    | exp . '<' exp
   43    | exp . LTE exp
   44    | exp . GTE exp
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '^' exp

    EQ   shift, and go to state 49
    NEQ  shift, and go to state 50
    GTE  shift, and go to state 51
    LTE  shift, and go to state 52
    '|'  shift, and go to state 53
    '&'  shift, and go to state 54
    '>'  shift, and go to state 55
    '<'  shift, and go to state 56
    '-'  shift, and go to state 57
    '+'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '^'  shift, and go to state 61
    ']'  shift, and go to state 103


state 75

   35 exp: FNCT '(' exp . ')'
   37    | exp . '|' exp
   38    | exp . '&' exp
   39    | exp . EQ exp
   40    | exp . NEQ exp
   41    | exp . '>' exp
   42    | exp . '<' exp
   43    | exp . LTE exp
   44    | exp . GTE exp
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '^' exp

    EQ   shift, and go to state 49
    NEQ  shift, and go to state 50
    GTE  shift, and go to state 51
    LTE  shift, and go to state 52
    '|'  shift, and go to state 53
    '&'  shift, and go to state 54
    '>'  shift, and go to state 55
    '<'  shift, and go to state 56
    '-'  shift, and go to state 57
    '+'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '^'  shift, and go to state 61
    ')'  shift, and go to state 104


state 76

   36 exp: FNCT2 '(' exp . ',' exp ')'
   37    | exp . '|' exp
   38    | exp . '&' exp
   39    | exp . EQ exp
   40    | exp . NEQ exp
   41    | exp . '>' exp
   42    | exp . '<' exp
   43    | exp . LTE exp
   44    | exp . GTE exp
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '^' exp

    EQ   shift, and go to state 49
    NEQ  shift, and go to state 50
    GTE  shift, and go to state 51
    LTE  shift, and go to state 52
    '|'  shift, and go to state 53
    '&'  shift, and go to state 54
    '>'  shift, and go to state 55
    '<'  shift, and go to state 56
    '-'  shift, and go to state 57
    '+'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '^'  shift, and go to state 61
    ','  shift, and go to state 105


state 77

   51 exp: '(' exp ')' .

    $default  reduce using rule 51 (exp)


state 78

   18 explist: explist ';' exp .
   37 exp: exp . '|' exp
   38    | exp . '&' exp
   39    | exp . EQ exp
   40    | exp . NEQ exp
   41    | exp . '>' exp
   42    | exp . '<' exp
   43    | exp . LTE exp
   44    | exp . GTE exp
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '^' exp

    EQ   shift, and go to state 49
    NEQ  shift, and go to state 50
    GTE  shift, and go to state 51
    LTE  shift, and go to state 52
    '|'  shift, and go to state 53
    '&'  shift, and go to state 54
    '>'  shift, and go to state 55
    '<'  shift, and go to state 56
    '-'  shift, and go to state 57
    '+'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '^'  shift, and go to state 61

    $default  reduce using rule 18 (explist)


state 79

   37 exp: exp . '|' exp
   38    | exp . '&' exp
   39    | exp . EQ exp
   39    | exp EQ exp .
   40    | exp . NEQ exp
   41    | exp . '>' exp
   42    | exp . '<' exp
   43    | exp . LTE exp
   44    | exp . GTE exp
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '^' exp

    NEQ  shift, and go to state 50
    GTE  shift, and go to state 51
    LTE  shift, and go to state 52
    '>'  shift, and go to state 55
    '<'  shift, and go to state 56
    '-'  shift, and go to state 57
    '+'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '^'  shift, and go to state 61

    $default  reduce using rule 39 (exp)


state 80

   37 exp: exp . '|' exp
   38    | exp . '&' exp
   39    | exp . EQ exp
   40    | exp . NEQ exp
   40    | exp NEQ exp .
   41    | exp . '>' exp
   42    | exp . '<' exp
   43    | exp . LTE exp
   44    | exp . GTE exp
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '^' exp

    GTE  shift, and go to state 51
    LTE  shift, and go to state 52
    '>'  shift, and go to state 55
    '<'  shift, and go to state 56
    '-'  shift, and go to state 57
    '+'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '^'  shift, and go to state 61

    $default  reduce using rule 40 (exp)


state 81

   37 exp: exp . '|' exp
   38    | exp . '&' exp
   39    | exp . EQ exp
   40    | exp . NEQ exp
   41    | exp . '>' exp
   42    | exp . '<' exp
   43    | exp . LTE exp
   44    | exp . GTE exp
   44    | exp GTE exp .
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '^' exp

    LTE  shift, and go to state 52
    '-'  shift, and go to state 57
    '+'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '^'  shift, and go to state 61

    $default  reduce using rule 44 (exp)


state 82

   37 exp: exp . '|' exp
   38    | exp . '&' exp
   39    | exp . EQ exp
   40    | exp . NEQ exp
   41    | exp . '>' exp
   42    | exp . '<' exp
   43    | exp . LTE exp
   43    | exp LTE exp .
   44    | exp . GTE exp
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '^' exp

    '-'  shift, and go to state 57
    '+'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '^'  shift, and go to state 61

    $default  reduce using rule 43 (exp)


state 83

   37 exp: exp . '|' exp
   37    | exp '|' exp .
   38    | exp . '&' exp
   39    | exp . EQ exp
   40    | exp . NEQ exp
   41    | exp . '>' exp
   42    | exp . '<' exp
   43    | exp . LTE exp
   44    | exp . GTE exp
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '^' exp

    EQ   shift, and go to state 49
    NEQ  shift, and go to state 50
    GTE  shift, and go to state 51
    LTE  shift, and go to state 52
    '&'  shift, and go to state 54
    '>'  shift, and go to state 55
    '<'  shift, and go to state 56
    '-'  shift, and go to state 57
    '+'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '^'  shift, and go to state 61

    $default  reduce using rule 37 (exp)


state 84

   37 exp: exp . '|' exp
   38    | exp . '&' exp
   38    | exp '&' exp .
   39    | exp . EQ exp
   40    | exp . NEQ exp
   41    | exp . '>' exp
   42    | exp . '<' exp
   43    | exp . LTE exp
   44    | exp . GTE exp
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '^' exp

    EQ   shift, and go to state 49
    NEQ  shift, and go to state 50
    GTE  shift, and go to state 51
    LTE  shift, and go to state 52
    '>'  shift, and go to state 55
    '<'  shift, and go to state 56
    '-'  shift, and go to state 57
    '+'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '^'  shift, and go to state 61

    $default  reduce using rule 38 (exp)


state 85

   37 exp: exp . '|' exp
   38    | exp . '&' exp
   39    | exp . EQ exp
   40    | exp . NEQ exp
   41    | exp . '>' exp
   41    | exp '>' exp .
   42    | exp . '<' exp
   43    | exp . LTE exp
   44    | exp . GTE exp
   45    | exp . '+' exp
   46    | exp . '-' exp
   47    | exp . '*' exp
   48    | exp . '/' exp
   50    | exp . '^' exp

    GTE  shift, and go to state 51
    LTE  shift, and go to state 52
    '<'  shift, and go to state 56
    '-'  shift, and go to state 57
    '+'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '^'  shift, and go to state 61

    $default  reduce using rule 41 (exp)


state 86
